--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pmnews-api",
+  "name": "loading-api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "silly-datetime": "^0.1.2"
   }
 }
